lint pre-commit postcreate
pre-commit run -a and config

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -22,17 +22,21 @@ RUN \
         pre-commit=${PRE_COMMIT_VERSION} \
         watchman=${WATCHMAN_VERSION}
 
+WORKDIR /app
+
 RUN \
     mkdir -p \
     /home/vscode/.vscode-server/extensions \
     /home/vscode/.cache/pre-commit; \
     chown -R vscode:vscode /home/vscode
 
-WORKDIR /app
-
 USER vscode
 
 COPY \
     package.json \
     package-lock.json \
+    ./
+
+COPY \
+    .pre-commit-config.yaml \
     ./
