--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,5 @@
 ---
-exclude: ^(apps/|docs/|migrations/|notes/|.venv/)
+exclude: ^(notes/)
 repos:
   - hooks:
       - args:
@@ -7,13 +7,10 @@ repos:
           - master
         id: no-commit-to-branch
       - id: check-added-large-files
-      - id: check-ast
       - id: check-case-conflict
-      - id: check-docstring-first
       - id: check-merge-conflict
       - id: check-toml
       - id: check-yaml
-      - id: debug-statements
       - id: detect-private-key
       - id: end-of-file-fixer
       - id: fix-byte-order-marker
@@ -21,3 +18,7 @@ repos:
       - id: trailing-whitespace
     repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.3.0
+  - hooks:
+      - id: prettier
+    repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v3.0.0-alpha.0
