--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,21 +1,36 @@
-# This config is equivalent to both the '.circleci/extended/orb-free.yml' and the base '.circleci/config.yml'
 version: 2.1
 
-# Orbs are reusable packages of CircleCI configuration that you may share across projects, enabling you to create encapsulated, parameterized commands, jobs, and executors that can be used across multiple projects.
+
 # See: https://circleci.com/docs/2.0/orb-intro/
 orbs:
   node: circleci/node@4.7
 
+parameters:
+  cache-version:
+    type: integer
+    default: 1
+  image-tag:
+    type: string
+    default: 18.2.1
+
+# See: https://circleci.com/developer/images/image/cimg/node
+executors:
+  node-executor:
+    docker:
+      - image: cimg/node:<< pipeline.parameters.image-tag >>
+
+jobs:
+  pre-commit:
+    executor: node-executor
+    steps:
+      - checkout
+      - run: node --version
+
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  sample: # This is the name of the workflow, feel free to change it to better match your workflow.
-    # Inside the workflow, you define the jobs you want to run.
+  lint-and-test:
     jobs:
-      - node/test:
-          # This is the node version to use for the `cimg/node` tag
-          # Relevant tags can be found on the CircleCI Developer Hub
-          # https://circleci.com/developer/images/image/cimg/node
-          version: '16.10'
-          # If you are using yarn, change the line below from "npm" to "yarn"
-          pkg-manager: npm
+      - pre-commit:
+          context:
+            - context
