--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,6 +30,9 @@ jobs:
               lint-cache
               -v<< pipeline.parameters.cache-version >>
               -{{ checksum ".pre-commit-config.yaml" }}
+      - run:
+          name: Install pre-commit
+          command: apt-get install --no-install-recommends -y pre-commit=2.17.0-1
       - save_cache:
           paths:
             - ~/.cache/pre-commit
@@ -37,7 +40,7 @@ jobs:
             lint-cache
             -v<< pipeline.parameters.cache-version >>
             -{{ checksum ".pre-commit-config.yaml" }}
-      - run: node --version
+      - run: pre-commit --version
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
