--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,9 +33,8 @@ jobs:
       - run:
           name: Install pre-commit
           command: |
-            sudo apt-get update
             sudo apt-get install --no-install-recommends -y python3-pip
-            pip install pre-commit
+            pip install pre-commit=2.21.0
       - save_cache:
           paths:
             - ~/.cache/pre-commit
