--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,7 @@ jobs:
       - run:
           name: Install pre-commit
           command: |
+            sudo apt-get update
             sudo apt-get install --no-install-recommends -y python3-pip
             pip install pre-commit=2.21.0
       - save_cache:
