--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,11 +35,11 @@ jobs:
               -{{ checksum ".pre-commit-config.yaml" }}
       - run:
           name: Install pre-commit
-          command: >-
-            sudo apt-get update; \
-            sudo apt-get install --no-install-recommends -y \
-              python3-pip; \
-            pip install pre-commit; \
+          command: |
+            sudo apt-get update 
+            sudo apt-get install --no-install-recommends -y \\
+              python3-pip
+            pip install pre-commit
             pre-commit install-hooks
       - save_cache:
           paths:
