--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,10 +36,10 @@ jobs:
       - run:
           name: Install pre-commit
           command: >
-            sudo apt-get update; \ 
+            sudo apt-get update;\
             sudo apt-get install --no-install-recommends -y \
-              python3-pip; \
-            pip install pre-commit; \
+              python3-pip;
+            pip install pre-commit;
             pre-commit install-hooks
       - save_cache:
           paths:
