--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,7 @@ jobs:
       - run:
           name: Install pre-commit
           command: |-
-            python
+            python3
             sudo apt-get update 
             sudo apt-get install --no-install-recommends -y \
               python3-pip;
