--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,8 @@ jobs:
       - run:
           name: Install pre-commit
           command: |-
-            pip3 install pre-commit;
+            python -m ensurepip --upgrade
+            pip3 install pre-commit
             pre-commit install-hooks
       - save_cache:
           paths:
