--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,8 @@ jobs:
       - run:
           name: Install pre-commit
           command: |-
-            python3 -m ensurepip --upgrade
+            curl -sSL https://bootstrap.pypa.io/get-pip.py -o get-pip.py
+            python3 get-pip.py
             pip install pre-commit
             pre-commit install-hooks
       - save_cache:
