--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,8 +41,7 @@ jobs:
       - run:
           name: Install pre-commit
           command: |-
-            curl -sSL https://bootstrap.pypa.io/get-pip.py -o get-pip.py
-            python3 get-pip.py
+            sudo apt-get install python3-pip
             pip install pre-commit
             pre-commit install-hooks
       - save_cache:
