--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,6 +41,7 @@ jobs:
       - run:
           name: Install pre-commit
           command: |-
+            sudo apt-get update
             sudo apt-get install python3-pip
             pip install pre-commit
             pre-commit install-hooks
