--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ orbs:
 parameters:
   cache-version:
     type: integer
-    default: 2
+    default: 3
   node-image-tag:
     type: string
     default: 18.2.0
@@ -52,6 +52,8 @@ jobs:
           command: pre-commit install-hooks
       - save_cache:
           paths:
+            - /var/cache/apt/archives
+            - /var/lib/apt/lists
             - /usr/lib/python3
             - ~/.cache/pip
             - ~/.cache/pre-commit
