--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ orbs:
 parameters:
   cache-version:
     type: integer
-    default: 3
+    default: 4
   node-image-tag:
     type: string
     default: 18.2.0
@@ -43,10 +43,10 @@ jobs:
           command: sudo apt-get update
       - run:
           name: Install pip
-          command: sudo apt-get install python3-pip
+          command: sudo apt-get install python3-pip=22.0.2+dfsg-1
       - run:
           name: Install pre-commit
-          command: pip install pre-commit
+          command: pip install pre-commit==2.21.0
       - run:
           name: Install pre-commit hooks
           command: pre-commit install-hooks
@@ -58,8 +58,6 @@ jobs:
             lint-cache
             -v<< pipeline.parameters.cache-version >>
             -{{ checksum ".pre-commit-config.yaml" }}
-      - run: which python3
-      - run: which pip
       - run:
           name: Run pre-commit
           command: pre-commit run --all
