--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
 ---
 x-app: &default-app
   build:
-    context: .
     dockerfile: Dockerfile
   restart: ${DOCKER_RESTART_POLICY:-unless-stopped}
 
@@ -11,19 +10,20 @@ services:
     <<: *default-app
     build:
       args:
-        # Available tags: https://mcr.microsoft.com/v2/vscode/devcontainers/base/tags/list
+        # IMAGE_VARIANT: https://mcr.microsoft.com/v2/vscode/devcontainers/base/tags/list
+        # NODE_VERSION: https://github.com/nodesource/distributions/blob/master/README.md
+        # NVM_VERSION: https://github.com/nvm-sh/nvm
+        # PRE_COMMIT_VERSION: https://pypi.org/project/pre-commit/
+        # PYTHON3_PIP_VERSION: https://packages.ubuntu.com/search?keywords=python3-pip
+        # WATCHMAN_VERSION: https://packages.ubuntu.com/search?keywords=watchman
         IMAGE_VARIANT: ${DEV_CONTAINER_IMAGE_VARIANT:-1.0.2-ubuntu-22.04}
-        # Node version: https://github.com/nodesource/distributions/blob/master/README.md
-        NODE_VERSION: ${DEV_CONTAINER_NODE:-18}
-        PRE_COMMIT_VERSION: ${DEV_CONTAINER_PRE_COMMIT_VERSION:-2.17.0-1}
+        NODE_VERSION: ${DEV_CONTAINER_NODE:-18.2.0}
+        NVM_VERSION: ${DEV_CONTAINER_NVM_VERSION:-0.39.3}
+        PRE_COMMIT_VERSION: ${DEV_CONTAINER_PRE_COMMIT_VERSION:-2.21.0}
+        PYTHON3_PIP_VERSION: ${DEV_CONTAINER_PYTHON3_PIP_VERSION:-22.0.2+dfsg-1}
         WATCHMAN_VERSION: ${DEV_CONTAINER_WATCHMAN_VERSION:-4.9.0-6build2}
       dockerfile: .devcontainer/Dockerfile
     command: sleep infinity
     volumes:
       - .:/app:cache
       - ~/.bash_history:/home/vscode/.bash_history:cache
-      - extensions-cache:/home/vscode/.vscode-server/extensions:cache
-
-volumes:
-  home-cache:
-  extensions-cache:
