--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,6 +30,13 @@ executors:
       - image: cimg/base:<< pipeline.parameters.ubuntu-image-tag >>
 
 jobs:
+  build:
+    executor: node-executor
+    steps:
+      - checkout
+      - setup_remote_docker:
+          docker_layer_caching: true
+      - run: docker compose build
   pre-commit:
     executor: node-executor
     steps:
@@ -67,6 +74,9 @@ jobs:
 workflows:
   lint-and-test:
     jobs:
+      - build:
+          context:
+            - context
       - pre-commit:
           context:
             - context
