--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,7 @@ jobs:
       - setup_remote_docker:
           docker_layer_caching: true
       - run: docker compose build
+      - run: docker compose run web npx --version
   pre-commit:
     executor: node-executor
     steps:
