--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,8 +37,7 @@ jobs:
       - setup_remote_docker:
           docker_layer_caching: true
       - run: docker compose build
-      - run: docker compose run web /home/vscode/.local/bin/pre-commit --version
-      - run: docker compose run web pwd
+      - run: docker compose run web git init .
       - run: docker compose run web /home/vscode/.local/bin/pre-commit run -a
   pre-commit:
     executor: node-executor
