--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,10 +37,10 @@ jobs:
       - setup_remote_docker:
           docker_layer_caching: true
       - run: docker compose build
-      - run: docker compose run web git init .
       - run: >-
           docker compose run -w /app web 
-          /bin/bash -c "ls -al && /home/vscode/.local/bin/pre-commit run -a" 
+          /bin/bash -c 
+          "ls -al && /home/vscode/.local/bin/pre-commit run -a" 
   pre-commit:
     executor: node-executor
     steps:
