--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,10 +28,7 @@ jobs:
       - setup_remote_docker:
           docker_layer_caching: true
       - run: docker compose build
-      - run: >-
-          docker compose run -w /app web 
-          /bin/bash -c 
-          "ls -al && /home/vscode/.local/bin/pre-commit run -a" 
+      - run: docker compose run -w web /bin/bash -c "ls -al && /home/vscode/.local/bin/pre-commit run -a" 
 workflows:
   lint-and-test:
     jobs:
