--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,24 +12,24 @@ orbs:
 parameters:
   ubuntu-image-tag:
     type: string
-    default: "2023.01"
+    default: 2022.10.2
 
-# Node image: https://circleci.com/developer/images/image/cimg/base
+# Image: https://circleci.com/developer/machine/image/ubuntu-2204
 executors:
-  node-executor:
-    docker:
-      - image: cimg/base:<< pipeline.parameters.ubuntu-image-tag >>
+  ubuntu-executor:
+    machine:
+      image: ubuntu-2204:<< pipeline.parameters.ubuntu-image-tag >>
 
 jobs:
   build:
-    executor: node-executor
+    executor: ubuntu-executor
     steps:
       - checkout
       - setup_remote_docker:
           docker_layer_caching: true
       - run: docker compose build
       - run: ls -al
-      - run: docker compose run -v .:/app:cache web /bin/bash -c "pwd && whoami && ls -al && git status && /home/vscode/.local/bin/pre-commit run -a" 
+      - run: docker compose run web /bin/bash -c "pwd && whoami && ls -al && git status && /home/vscode/.local/bin/pre-commit run -a" 
 workflows:
   lint-and-test:
     jobs:
