--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,7 @@ executors:
   ubuntu-executor:
     machine:
       image: ubuntu-2204:<< pipeline.parameters.ubuntu-image-tag >>
+      docker_layer_caching: true
 
 jobs:
   build:
