--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,8 +27,7 @@ jobs:
     steps:
       - checkout
       - run: docker compose build
-      - run: ls -al
-      - run: docker compose run web /bin/bash -c "pwd && whoami && ls -al && /home/vscode/.local/bin/pre-commit run -a" 
+      - run: docker compose run web /bin/bash -c "ls -al && /home/vscode/.local/bin/pre-commit run -a" 
 workflows:
   lint-and-test:
     jobs:
