default user id for mounted volumes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
         WATCHMAN_VERSION: ${DEV_CONTAINER_WATCHMAN_VERSION:-4.9.0-6build2}
       dockerfile: .devcontainer/Dockerfile
     command: sleep infinity
+    user: "1000:1000"
     volumes:
       - .:/app:cache
       - ~/.bash_history:/home/vscode/.bash_history:cache
