--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,9 +27,8 @@ jobs:
     steps:
       - checkout
       - run: docker compose build
-      - run: docker compose run web cat /etc/passwd
-      - run: docker compose run web ls -al
-      - run: docker compose run web /bin/bash -c "sudo chown -R vscode:vscode . && git config --global --add safe.directory /app && /home/vscode/.local/bin/pre-commit run -a"
+      - run: docker compose run web /bin/bash -c "sudo chown -R vscode:vscode . && ~/.local/bin/pre-commit run -a" 
+      - run: docker compose run web /bin/bash -c "sudo chown -R vscode:vscode . && pre-commit run -a" 
 workflows:
   lint-and-test:
     jobs:
