--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,9 +27,11 @@ jobs:
     steps:
       - checkout
       - run: docker compose build
-      - run: >-
-          docker compose run web /bin/bash 
-          -c "sudo chown -R vscode:vscode . && ~/.local/bin/pre-commit run -a"
+      - run: 
+          name: Run pre-commit
+          command: >-
+            docker compose run web /bin/bash 
+            -c "sudo chown -R vscode:vscode . && ~/.local/bin/pre-commit run -a"
 workflows:
   lint-and-test:
     jobs:
