--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,11 +32,11 @@ jobs:
           name: Build Docker image
           command: docker compose build
       - run: docker images 
-      - run: docker save -o workspace/web.tar web
+      - run: docker save -o workspace/project-web.tar project-web
       - persist_to_workspace:
           root: workspace
           paths:
-            - web.tar
+            - project-web.tar
   pre-commit:
     executor: ubuntu-executor
     steps:
