--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,7 +48,7 @@ jobs:
       - run: 
           name: Load Docker image
           command: docker load -i workspace/project-web.tat
-      - command: docker images
+      - run: docker images
       - run: 
           name: Build Docker image
           command: docker compose build
