--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,13 +25,9 @@ jobs:
   build:
     executor: ubuntu-executor
     steps:
-      - checkout
       - run: 
           name: Create workspace directory
           command: mkdir -p workspace
-      - run: 
-          name: Build Docker image
-          command: docker compose build
       - run: 
           name: Save workspace files
           command: touch workspace/project-web.tar
@@ -53,6 +49,20 @@ jobs:
           command: >-
             docker compose run web /bin/bash 
             -c "sudo chown -R vscode:vscode . && ~/.local/bin/pre-commit run -a"
+  test:
+    executor: ubuntu-executor
+    steps:
+      - checkout
+      - attach_workspace:
+          at: ./workspace
+      - run: 
+          name: Build Docker image
+          command: docker compose build
+      - run: 
+          name: Run pre-commit
+          command: >-
+            docker compose run web /bin/bash 
+            -c "sudo chown -R vscode:vscode . && ~/.local/bin/pre-commit run -a"
 workflows:
   lint-and-test:
     jobs:
@@ -60,5 +70,8 @@ workflows:
           context:
             - context
       - pre-commit:
+          requires:
+            - build
+      - test:
           requires:
             - build
