--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~47.0.9",
-    "expo-status-bar": "~1.4.2",
+    "@expo/vector-icons": "13.0.0",
+    "expo": "47.0.9",
+    "expo-image-picker": "14.0.2",
+    "expo-status-bar": "1.4.2",
     "react": "18.1.0",
-    "react-native": "0.70.5",
-    "@expo/vector-icons": "^13.0.0",
-    "expo-image-picker": "~14.0.2"
+    "react-native": "0.70.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "7.12.9"
   },
   "private": true
 }
