--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@expo/vector-icons": "13.0.0",
+    "@expo/webpack-config": "0.17.2",
     "expo": "47.0.9",
     "expo-image-picker": "14.0.2",
     "expo-status-bar": "1.4.2",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-dom": "18.1.0",
+    "react-native": "0.70.5",
+    "react-native-web": "0.18.9"
   },
   "devDependencies": {
     "@babel/core": "7.12.9"
