--- a/package.json
+++ b/package.json
@@ -20,7 +20,13 @@
     "react-native-web": "0.18.9"
   },
   "devDependencies": {
-    "@babel/core": "7.12.9"
+    "@babel/core": "7.12.9",
+    "@typescript-eslint/parser": "5.48.0",
+    "eslint": "8.31.0",
+    "jest": "26.6.3",
+    "jest-expo": "47.0.1",
+    "prettier": "2.8.1",
+    "typescript": "4.6.3"
   },
   "private": true
 }
