--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,3 +30,6 @@ services:
     volumes:
       - .:/app:cache
       - ~/.bash_history:/home/vscode/.bash_history:cache
+      - extensions-cache:/home/vscode/.vscode-server/extensions:cache
+volumes:
+  extensions-cache:
