--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -30,11 +30,18 @@
         "xabikos.javascriptsnippets"
       ],
       "settings": {
+        "editor.codeActionsOnSave": {
+          "source.organizeImports": true
+        },
+        "editor.formatOnSave": true,
+        "editor.formatOnSaveMode": "file",
+        "editor.rulers": [88],
         "workbench.colorCustomizations": {
           "titleBar.activeBackground": "#00FFFF",
           "titleBar.activeForeground": "#000000"
         },
-        "window.title": "${localWorkspaceFolderBasename}${separator}${activeEditorShort}"
+        "window.title": "${localWorkspaceFolderBasename}${separator}${activeEditorShort}",
+        "yaml.format.enable": true
       }
     }
   },
